--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": ["zemereshet", "download", "music"],
+  "keywords": [
+    "zemereshet",
+    "download",
+    "music"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "archiver": "^5.3.1",
     "axios": "^1.6.2",
+    "bcryptjs": "^3.0.3",
     "cheerio": "1.0.0-rc.12",
-    "iconv-lite": "^0.6.3",
     "dotenv": "^16.3.1",
-    "archiver": "^5.3.1"
+    "express": "^4.18.2",
+    "iconv-lite": "^0.6.3"
   },
   "engines": {
     "node": ">=18.0.0"
